- Fixed bug #55340 (segfault when using some arguments -- bug introduced by commit r313351)